finish html, initial css

--- a/index.html
+++ b/index.html
@@ -7,38 +7,43 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Single Price Grid Component</title>
+  <link rel="stylesheet" href="style.css">
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-  Join our community
+  <main id="content">
+    <article class="offer">
+      <section class="invite">
+        <h1>Join our community</h1>
 
-  30-day, hassle-free money back guarantee
+        <p>30-day, hassle-free money back guarantee</p>
 
-  Gain access to our full library of tutorials along with expert code reviews. 
-  Perfect for any developers who are serious about honing their skills.
+        <p>Gain access to our full library of tutorials along with expert code reviews. 
+        Perfect for any developers who are serious about honing their skills.</p>
+      </section>
+      <section class="sub">
+        <h1>Monthly Subscription</h1>
 
-  Monthly Subscription
+        <p><span>&dollar;29</span> per month</p>
 
-  &dollar;29 per month
+        <p>Full access for less than &dollar;1 a day</p>
 
-  Full access for less than &dollar;1 a day
+        <button>Sign Up</button>
+      </section>
+      <section class="promo">
+        <h1>Why Us</h1>
 
-  Sign Up
-
-  Why Us
-
-  Tutorials by industry experts
-  Peer &amp; expert code review
-  Coding exercises
-  Access to our GitHub repos
-  Community forum
-  Flashcard decks
-  New videos every week
+        <p>Tutorials by industry experts
+        Peer &amp; expert code review
+        Coding exercises
+        Access to our GitHub repos
+        Community forum
+        Flashcard decks
+        New videos every week</p>
+      </section>
+    </article>
+  </main>
   
   <footer>
     <p class="attribution">
