--- a/index.html
+++ b/index.html
@@ -17,30 +17,31 @@
       <section class="invite">
         <h1>Join our community</h1>
 
-        <p>30-day, hassle-free money back guarantee</p>
+        <p class="guarantee">30-day, hassle-free money back guarantee</p>
 
         <p>Gain access to our full library of tutorials along with expert code reviews. 
         Perfect for any developers who are serious about honing their skills.</p>
       </section>
       <section class="sub">
         <h1>Monthly Subscription</h1>
-
-        <p><span>&dollar;29</span> per month</p>
-
-        <p>Full access for less than &dollar;1 a day</p>
+        <p class="price"><span>&dollar;29&nbsp;</span> per month</p>
+        <p class="perDay">Full access for less than &dollar;1 a day</p>
 
         <button>Sign Up</button>
       </section>
       <section class="promo">
         <h1>Why Us</h1>
 
-        <p>Tutorials by industry experts
-        Peer &amp; expert code review
-        Coding exercises
-        Access to our GitHub repos
-        Community forum
-        Flashcard decks
-        New videos every week</p>
+        <p>
+        <span>Tutorials by industry experts</span>
+        <span>Peer &amp; expert code review</span>
+        <span>Coding exercises</span>
+        <span>Access to our GitHub repos</span>
+        <span>Community forum</span>
+        <span>Flashcard decks</span>
+        <span> New videos every week</span>
+
+        </p>
       </section>
     </article>
   </main>
@@ -48,7 +49,7 @@
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="#">promatinwk</a>.
     </p>
   </footer>
 </body>
